--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ nav {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-image: url(images/news-bg.svg);
+    background-image: url("https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/cce1b5ad05ad05e87fac3cbb66348ba4d3eb3953/images/news-bg.svg");
 }
 
 .news_title {
@@ -475,7 +475,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(images/footer-bg.svg);
+    background-image: url("https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/cce1b5ad05ad05e87fac3cbb66348ba4d3eb3953/images/footer-bg.svg");
 }
 
 .footer_bottom-logo {
